# python-experiments

./: .build.yml  .gitignore  Dockerfile  Makefile  README.md  arxivstatsbot.py  bear.Dockerfile  bear.py  genindex.html  graduated.json  introduction.html  intrplate.html  intrplate.py  jboptim.py  jupex.py  jupyter_extract.py  libsardine.py  objects.inv  parrot.html  parrot.py  pyproject.toml  readme.py  requirements-test.txt  requirements.txt  robby.py  sb.py  search.html  searchindex.js  wax.py
.github/workflows/: workflow.yml
_sources/: intrplate.ipynb  parrot.ipynb
arxivist/: core.py
bear/: sync.py
common/: fs.py  notes.py  secrets.py
docs/: index.html  search.html  searchindex.js
libbear/: database.py  sync.py
libwax/: templates.py
pmmlzoo/: pmmlzoo.py
pyxai/: pyxai.py
tasks/: __init__.py
wax/: templates.py
