[tool.poetry]
name = "python-experiments"
version = "0.1.0"
description = "A collection of Python experiments"
authors = ["Rui Vieira <ruidevieira@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
tqdm = "*"
coloredlogs = "*"
colorama = "*"
nuitka = "*"
'Mastodon.py' = "*"
pony = "*"
jupyter = "^1.0.0"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.782"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
