[tool.poetry]
name = "python-experiments"
version = "0.1.0"
description = "A collection of Python experiments"
authors = ["Rui Vieira <ruidevieira@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
tqdm = "*"
coloredlogs = "*"
colorama = "*"
nuitka = "*"
'Mastodon.py' = "*"
pony = "*"
jupyter = "^1.0.0"
scipy = "^1.5.2"
markovify = "^0.8.3"
tweepy = "^3.9.0"
hy = "^0.19.0"
beautifulsoup4 = "^4.9.3"
Pillow = "^8.0.0"
lxml = "^4.6.1"
csscompressor = "^0.9.5"
jsmin = "^2.2.2"
coconut = "1.4.0"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.782"
black = "^20.8b1"
ghp-import = "^1.0.0"
jedhy = {git = "https://github.com/ekaschalk/jedhy.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
